# salsa

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  lambda.yaml  release.yml
.cargo/: config.toml
.github/workflows/: release.yml
src/: config.rs  dapp_process.rs  http_service.rs  lib.rs  main.rs  utils.rs
src/rollup/: mod.rs
tests/: lambada-http-server-tests.rs
